# Project_Brick

./: Makefile  Makefile.am  Makefile.in  README.md  barometerbrick.c  bricklet_accelerometer.c  bricklet_accelerometer.h  config.h  config.status  configure  configure.ac  getTinker.c  getTinker.h  initAlles.c  initAlles.h  lcd.c  main.c  mtimer.c  mtimer.h  myDisplay.c  myDisplay.h  ownheader.h  sharedmem.c  sonstiges.c  sonstiges.h  std_func.c  test  touch.h
Debug/: Makefile  config.status  test
Debug/.deps/: brick_dc.Po  brick_master.Po  brick_servo.Po  brick_stepper.Po  bricklet_barometer.Po  bricklet_color.Po  bricklet_distance_ir.Po  bricklet_distance_us.Po  bricklet_dual_button.Po  bricklet_gps.Po  bricklet_humidity.Po  bricklet_laser_range_finder.Po  bricklet_lcd_20x4.Po  bricklet_linear_poti.Po  bricklet_multi_touch.Po  bricklet_temperature_ir.Po  getTinker.Po  initAlles.Po  ip_connection.Po  lcd.Po  main.Po  mtimer.Po  myDisplay.Po  sharedmem.Po  sonstiges.Po
Optimized/: A  Makefile  config.status  test
Optimized/.deps/: barometerbrick.Po  brick_dc.Po  brick_master.Po  brick_servo.Po  brick_stepper.Po  bricklet_barometer.Po  bricklet_color.Po  bricklet_distance_ir.Po  bricklet_distance_us.Po  bricklet_dual_button.Po  bricklet_gps.Po  bricklet_humidity.Po  bricklet_laser_range_finder.Po  bricklet_lcd_20x4.Po  bricklet_linear_poti.Po  bricklet_multi_touch.Po  bricklet_temperature_ir.Po  getTinker.Po  gps.Po  initAlles.Po  ip_connection.Po  ir1.Po  lcd.Po  main.Po  mtimer.Po  myDisplay.Po  sharedmem.Po  (+1 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
