## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = test

test_SOURCES =  \
	brick_dc.c \
	brick_dc.h \
	bricklet_barometer.c \
	bricklet_barometer.h \
	bricklet_color.c \
	bricklet_color.h \
	bricklet_distance_ir.c \
	bricklet_distance_ir.h \
	bricklet_distance_us.c \
	bricklet_distance_us.h \
	bricklet_gps.c \
	bricklet_gps.h \
	bricklet_lcd_20x4.c \
	bricklet_lcd_20x4.h \
	bricklet_temperature_ir.c \
	bricklet_temperature_ir.h \
	brick_master.c \
	brick_master.h \
	brick_servo.c \
	brick_servo.h \
	brick_stepper.c \
	brick_stepper.h \
	getTinker.c \
	getTinker.h \
	ip_connection.c \
	ip_connection.h \
	lcd.c \
	lcd.h \
	main.c \
	ownheader.h \
	sharedmem.c \
	sonstiges.c \
	sonstiges.h \
	mtimer.c \
	mtimer.h \
	myDisplay.c \
	myDisplay.h \
	initAlles.c \
	initAlles.h \
	bricklet_humidity.c \
	bricklet_humidity.h \
	bricklet_dual_button.c \
	bricklet_dual_button.h \
	bricklet_laser_range_finder.c \
	bricklet_laser_range_finder.h \
	bricklet_linear_poti.c \
	bricklet_linear_poti.h \
	bricklet_multi_touch.c \
	bricklet_multi_touch.h

test_LDFLAGS = 

test_LDADD =  \
	-lpthread \
	-lncurses

